--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #484d48;
+  background-color: #dadada;
   margin: 0;
   padding: 10px;
-  text-align: center;
-  font-size: xx-large;
+  text-align: left;
+  font-size: x-large;
   font-family: poppins;
 }
 
@@ -11,12 +11,13 @@ body {
   border-radius: 5em;
   cursor: pointer;
   padding-left: 10px;
+  margin-left: 10px;
   padding-right: 10px;
   color: white;
   border: none;
   font-weight: bold;
   background-color: green;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 #input-el {
@@ -33,20 +34,18 @@ body {
           box-sizing: border-box;
 }
 
-#container {
-  background-color: aqua;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: auto;
-  height: 100px;
-}
-
-#dis {
-  color: green;
-}
-
 a {
-  color: blue;
+  color: green;
   text-decoration: none;
+}
+
+ul {
+  margin-top: 20px;
+  list-style: none;
+}
+
+li {
+  margin-left: 2px;
+  margin-top: 2px;
 }
 /*# sourceMappingURL=style.css.map */
