--- a/style.scss
+++ b/style.scss
@@ -1,21 +1,22 @@
 body {
-  background-color: rgb(72, 77, 72);
+  background-color: rgb(218, 218, 218);
   margin: 0;
   padding: 10px;
-  text-align: center;
-  font-size: xx-large;
+  text-align: left;
+  font-size: x-large;
   font-family: poppins;
 }
 #input-btn {
   border-radius: 5em;
   cursor: pointer;
   padding-left: 10px;
+  margin-left: 10px;
   padding-right: 10px;
   color: white;
   border: none;
   font-weight: bold;
   background-color: green;
-  font-size: xx-large;
+  font-size: x-large;
 }
 #input-el {
   padding-top: 10px;
@@ -29,16 +30,17 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
-#container {
-  background-color: aqua;
-  box-sizing: border-box;
-  width: auto;
-  height: 100px;
-}
-#dis {
-  color: green;
-}
+
 a {
-  color: blue;
+  color: green;
   text-decoration: none;
+}
+ul {
+  margin-top: 20px;
+  list-style: none;
+}
+li {
+  margin-left: 2px;
+
+  margin-top: 2px;
 }
