--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,8 @@ body {
   text-align: left;
   font-size: x-large;
   font-family: poppins;
+  min-width: 200px;
+  max-width: 400px;
 }
 #input-btn {
   border-radius: 5em;
