--- a/style.css
+++ b/style.css
@@ -15,10 +15,23 @@ body {
   padding-left: 10px;
   margin-left: 10px;
   padding-right: 10px;
+  border: 1px solid green;
   color: white;
-  border: none;
   font-weight: bold;
   background-color: green;
+  font-size: x-large;
+}
+
+#reset {
+  border-radius: 5em;
+  cursor: pointer;
+  padding-left: 10px;
+  margin-left: 10px;
+  padding-right: 10px;
+  border: 1px solid green;
+  color: green;
+  font-weight: bold;
+  background-color: white;
   font-size: x-large;
 }
 
