--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
   max-width: 400px;
 }
 
-#input-btn {
+#input-btn,
+#savetab {
   border-radius: 5em;
   cursor: pointer;
   padding-left: 10px;
@@ -49,7 +50,8 @@ body {
           box-sizing: border-box;
 }
 
-a {
+a,
+p {
   color: green;
   text-decoration: none;
 }
